bundled_metadata/force-app/main/default/objects/ContentVersion/fields/Development_Task__c.field-meta.xml
<CustomField>
    <fullName>Development_Task__c</fullName>
    <description>Deprecated. Use KPI_ID__c for development priority KPI. This field will be removed after data migration. Only a placeholder picklist value remains.</description>
    <inlineHelpText>Deprecated — use KPI ID (KPI_ID__c). This field will be deleted.</inlineHelpText>
    <label>Development Task Name (deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deprecated_Migrate_To_KPI_ID</fullName>
                <label>Deprecated — use KPI ID field (will be deleted)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>