bundled_metadata/force-app/main/default/objects/ContentVersion/fields/EUSFA_Customer__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <filterItems>
            <field>Account.Market__c</field>
            <operation>equals</operation>
            <valueField>$User.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Content Versions (Account)</relationshipLabel>
    <relationshipName>Content_Versions1</relationshipName>
    <type>Lookup</type>
</CustomField>