bundled_metadata/force-app/main/default/objects/ContentVersion/fields/EUSFA_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Document</fullName>
            </value>
            <value>
                <fullName>Cycle Priorities</fullName>
                <label>Commercial Priorities</label>
            </value>
            <value>
                <fullName>Store Specific</fullName>
            </value>
            <value>
                <fullName>Development Task Image</fullName>
            </value>
            <value>
                <fullName>IBAN Verification</fullName>
            </value>
            <value>
                <fullName>Customer Image</fullName>
                <isActive>false</isActive>
                <label>Customer Image</label>
            </value>
            <value>
                <fullName>Operational Task Image</fullName>
                <isActive>false</isActive>
                <label>Operational Task Image</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>