bundled_metadata/force-app/main/default/objects/ContentVersion/fields/EUSFA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>