bundled_metadata/force-app/main/default/objects/ContentVersion/fields/EUSFA_Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Is_Latest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Latest?</label>
    <type>Checkbox</type>
</CustomField>