bundled_metadata/force-app/main/default/objects/ContentVersion/fields/EUSFA_IsActive__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_IsActive__c</fullName>
    <formula>AND(
TODAY() &gt;= EUSFA_Start_Date__c ,
TODAY() &lt;= EUSFA_End_Date__c
)</formula>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>