bundled_metadata/force-app/main/default/objects/ContentVersion/fields/EUSFA_Key_Account_Banner__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Key_Account_Banner__c</fullName>
    <label>Key Account/Banner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>