bundled_metadata/force-app/main/default/objects/ContentVersion/fields/EUSFA_Multi_Route_Selection__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Multi_Route_Selection__c</fullName>
    <label>Multi Route Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>