bundled_metadata/force-app/main/default/objects/ContentVersion/fields/EUSFA_PS_L3_Snack_Value_Segmt__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_PS_L3_Snack_Value_Segmt__c</fullName>
    <label>PS L3 Snack value segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricegroup_Cluster_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>