bundled_metadata/force-app/main/default/objects/ContentVersion/fields/EUSFA_Route_Sales_Geo__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Route_Sales_Geo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Sales Geo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Market__c</field>
            <operation>equals</operation>
            <valueField>Route_Sales_Geo__c.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Route_Sales_Geo__c</referenceTo>
    <relationshipLabel>Content Versions (Route Sales Geo)</relationshipLabel>
    <relationshipName>Content_Versions1</relationshipName>
    <type>Lookup</type>
</CustomField>