bundled_metadata/force-app/main/default/objects/ContentVersion/fields/EUSFA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>