bundled_metadata/force-app/main/default/objects/ContentVersion/fields/Image_thumbnail_url__c.field-meta.xml
<CustomField>
    <fullName>Image_thumbnail_url__c</fullName>
    <label>Image thumbnail url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>