bundled_metadata/force-app/main/default/objects/ContentVersion/fields/KPI_ID__c.field-meta.xml
<CustomField>
    <fullName>KPI_ID__c</fullName>
    <description>Development priority KPI for Development Task Image document types.</description>
    <label>KPI ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P41_LV_S</fullName>
                <label>P41_LV_S - Number of Displays</label>
            </value>
            <value>
                <fullName>P42_LV_S</fullName>
                <label>P42_LV_S - Number of Coolers</label>
            </value>
            <value>
                <fullName>P2_L12W_S_F</fullName>
                <label>P2_L12W_S_F - MSL Distribution Foods (Sales)</label>
            </value>
            <value>
                <fullName>P2_L12W_S_B</fullName>
                <label>P2_L12W_S_B - MSL Distribution Beverages (Sales)</label>
            </value>
            <value>
                <fullName>P2_LV_S_F</fullName>
                <label>P2_LV_S_F - MSL Distribution Foods (audit)</label>
            </value>
            <value>
                <fullName>P2_LV_S_B</fullName>
                <label>P2_LV_S_B - MSL Distribution Beverages (audit)</label>
            </value>
            <value>
                <fullName>P3_LV_S</fullName>
                <label>P3_LV_S - CDA Distribution</label>
            </value>
            <value>
                <fullName>P30_LV_S_F</fullName>
                <label>P30_LV_S_F - Main Space Share Foods</label>
            </value>
            <value>
                <fullName>P30_LV_S_B</fullName>
                <label>P30_LV_S_B - Main Space Share Beverages</label>
            </value>
            <value>
                <fullName>P32_LV_S_F</fullName>
                <label>P32_LV_S_F - Total Space Share Foods</label>
            </value>
            <value>
                <fullName>P32_LV_S_B</fullName>
                <label>P32_LV_S_B - Total Space Share Beverages</label>
            </value>
            <value>
                <fullName>P53_LV_S_F</fullName>
                <label>P53_LV_S_F - Main Space Compliance Foods</label>
            </value>
            <value>
                <fullName>P53_LV_S_B</fullName>
                <label>P53_LV_S_B - Main Space Compliance Beverages</label>
            </value>
            <value>
                <fullName>P56_LV_S_F</fullName>
                <label>P56_LV_S_F - Secondary Space Compliance Foods</label>
            </value>
            <value>
                <fullName>P56_LV_S_B</fullName>
                <label>P56_LV_S_B - Secondary Space Compliance Beverages</label>
            </value>
            <value>
                <fullName>G16_LV_S</fullName>
                <label>G16_LV_S - PepsiCo Exclusivity</label>
            </value>
            <value>
                <fullName>O11_LV_S</fullName>
                <label>O11_LV_S - Visibility: Branded POS</label>
            </value>
            <value>
                <fullName>O03_LV_S</fullName>
                <label>O03_LV_S - Variety: Menu Visibility</label>
            </value>
            <value>
                <fullName>O12_LV_S</fullName>
                <label>O12_LV_S - Value: Combo Execution / Mixology</label>
            </value>
            <value>
                <fullName>O10_LV_S</fullName>
                <label>O10_LV_S - Products on Digital Platform</label>
            </value>
            <value>
                <fullName>G20_L4W_S</fullName>
                <label>G20_L4W_S - Frequent Digital Buyer</label>
            </value>
            <value>
                <fullName>G27_L4W_R</fullName>
                <isActive>false</isActive>
                <label>% Frequent Digital Buyer</label>
            </value>
            <value>
                <fullName>G1_L12W_R</fullName>
                <isActive>false</isActive>
                <label>Active Customers</label>
            </value>
            <value>
                <fullName>S7_QTD_R_F</fullName>
                <isActive>false</isActive>
                <label>Delivered Cases QTD</label>
            </value>
            <value>
                <fullName>G_06</fullName>
                <isActive>false</isActive>
                <label>G_06 - Competitor Products in Store</label>
            </value>
            <value>
                <fullName>G_07</fullName>
                <isActive>false</isActive>
                <label>G_07 - Competitor Products in Cooler</label>
            </value>
            <value>
                <fullName>P15_LV_S</fullName>
                <isActive>false</isActive>
                <label>MSL Availability</label>
            </value>
            <value>
                <fullName>S4_MTD_R_B</fullName>
                <isActive>false</isActive>
                <label>Net Sales MTD Route Beverages</label>
            </value>
            <value>
                <fullName>S4_MTD_R_F</fullName>
                <isActive>false</isActive>
                <label>Net Sales MTD Route Foods</label>
            </value>
            <value>
                <fullName>S4_MTD_R_OT</fullName>
                <isActive>false</isActive>
                <label>Net Sales Total OT Channel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>