bundled_metadata/force-app/main/default/objects/ContentVersion/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Market for this file; uses the same global value set as User and related objects.</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Markets</valueSetName>
    </valueSet>
</CustomField>