bundled_metadata/force-app/main/default/objects/ContentVersion/fields/Thumbnail_Image__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Image__c</fullName>
    <label>Thumbnail Image</label>
    <type>Url</type>
</CustomField>