bundled_metadata/force-app/main/default/objects/ContentVersion/validationRules/CyclePriortiesTypeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CyclePriortiesTypeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(EUSFA_Document_Type__c, &quot;Cycle Priorities&quot;),
    OR(
        ISBLANK(Title),
        ISBLANK(Description),
        ISBLANK( Thumbnail_Image__c )
    )
)</errorConditionFormula>
    <errorMessage>For ‘Cycle Priorities’, Title, Description, Thumbnail Image URL are required.</errorMessage>
</ValidationRule>