bundled_metadata/force-app/main/default/objects/ContentVersion/validationRules/EUSFA_DevTaskImage_Kpi_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>EUSFA_DevTaskImage_Kpi_Required</fullName>
    <active>true</active>
    <description>KPI ID (KPI_ID__c) required when Document Type is Development Task Image.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(EUSFA_Document_Type__c, &quot;Development Task Image&quot;),
  ISBLANK(TEXT(KPI_ID__c))
)</errorConditionFormula>
    <errorDisplayField>KPI_ID__c</errorDisplayField>
    <errorMessage>Select a KPI ID when Document Type is Development Task Image.</errorMessage>
</ValidationRule>