bundled_metadata/force-app/main/default/objects/ContentVersion/validationRules/EUSFA_Market_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>EUSFA_Market_Required</fullName>
    <active>true</active>
    <description>Market is required when Document Type is populated (EUSFA documents only).</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(TEXT(EUSFA_Document_Type__c))),
    ISBLANK(TEXT(Market__c))
)</errorConditionFormula>
    <errorMessage>Market is required for EUSFA documents. Please select a Market.</errorMessage>
</ValidationRule>