bundled_metadata/force-app/main/default/objects/ContentVersion/validationRules/EUSFA_RestrictUpdateDocumentType.validationRule-meta.xml
<ValidationRule>
    <fullName>EUSFA_RestrictUpdateDocumentType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name = &quot;EUSFA&quot;,
    NOT(ISNEW()),
    ISCHANGED(EUSFA_Document_Type__c),
    NOT(
        ISPICKVAL(
            PRIORVALUE(EUSFA_Document_Type__c),&quot;&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>Update failed: Document Type is locked and cannot be modified after creation</errorMessage>
</ValidationRule>