bundled_metadata/force-app/main/default/objects/ContentVersion/validationRules/StoreSpecificTypeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>StoreSpecificTypeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(EUSFA_Document_Type__c, &quot;Store Specific&quot;),
    OR(
       NOT(ISBLANK(EUSFA_Route_Sales_Geo__c)),
       AND(
      	   ISBLANK(EUSFA_Customer__c),
           ISBLANK(EUSFA_Key_Account__c),
           ISBLANK(TEXT(EUSFA_PS_L3_Bevs_Value_Segmt__c)),
           ISBLANK(TEXT(EUSFA_PS_L3_Snack_Value_Segmt__c)),
           ISBLANK(TEXT(EUSFA_L2_Subchannel__c))
       )      
        
    )
)</errorConditionFormula>
    <errorMessage>For &quot;Store Specific&quot; document type, Any one of the Customer Hierarchy fields must be populated and Route Sales Geo must be blank.</errorMessage>
</ValidationRule>